bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod
  namespace: rbac-demo
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
